--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,7 @@ jobs:
       run: npm i
     - name: Run eslint
       run: npm run lint
-    - name: Set up Firefox
-      uses: mozilla/setup-firefox@v1
-      with:
-        version: latest
+    - name: Install Firefox
+      run: sudo apt-get update && sudo apt-get install -y firefox
     - name: Run tests
       run: npm run wdio
